# HelloCV

./: CMakeLists.txt  HelloCV  README.md
CryptoTool/: READ.md
CryptoTool/FileEncryptor/: Crypto.h  EncryptorApp.h  FileHandler.h
CryptoTool/FileEncryptor/~/: Crypto.cpp  EncryptorApp.cpp  main.cpp
CryptoTool/src/: Filehandler.cpp
